@@ -67,7 +67,9 @@ my @modules = (
                 "Net::Netmask",
                 "Net::Pcap",
                 "Net::Ping",
-                "Net::RawIP",
+                "Net::Frame",
+                "Net::Frame::Simple",
+                "Net::Write",
                 "Net::SNMP",
                 "Net::Telnet",
                 "Parse::RecDescent",
